--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
       <!-- <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.0/vconsole.min.js"></script> -->
     <script>
-        var vConsole = new VConsole();
+       // var vConsole = new VConsole();
         console.log('Hello world');
     </script>
   </body>
